--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
        {% block nav %}
        <ul>
             <li><a href="/">Accueil</a></li>
-            <li><a href="/article/">Blog</a></li>
+            <li><a href="/articles/">Blog</a></li>
             <li><a href="/contact/">Contact</a></li>
        </ul>
        {% endblock %}
