--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,12 +1,37 @@
 {% extends "./base.html" %}
 {% block title %}Ma page d'accueil{% endblock %}
 {% block content %}
-    <h2>Bienvenue !</h2>
-    <p>
-       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus 
-       massa non tortor. Vestibulum diam diam, posuere in viverra in, 
-       ullamcorper et libero. Donec eget libero quis risus congue imperdiet ac 
-       id lectus. Nam euismod cursus arcu, et consequat libero ullamcorper sit 
-       amet.
-    </p>
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1>Le Blog du Yeti</h1>
+                <hr>
+                <p>Merci d'avoir pris de temps de venir ici</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">le blog</a>
+            </div>
+        </div>
+    </header>
+
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Retrouvez l'intégrélité de se projet Django sur Github !</h2>
+                <a href="https://github.com/GastonLeYeti/python3_blog" class="btn btn-default btn-git wow"><i class="fa fa-github fa-4x"></i></a>
+            </div>
+        </div>
+    </aside>
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">You want to touch my tralala ?</h2>
+                </div>
+                <div class="col-lg-4 col-lg-offset-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x wow" data-wow-delay=".1s"></i>
+                    <p><a href="mailto:gaetan.pecqueux@gmail.com">send me</a></p>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
