--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,7 +7,7 @@
                 <h1>Le Blog du Yeti</h1>
                 <hr>
                 <p>Merci d'avoir pris de temps de venir ici</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">le blog</a>
+                <a href="/articles" class="btn btn-primary btn-xl page-scroll">le blog</a>
             </div>
         </div>
     </header>
