--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,9 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/static/css/style.css" type="text/css">
+  
+    <!-- add specific css -->
+    {% block addCss %} {% endblock %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,14 +47,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Blog Django feat Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Blog du Yeti</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="">Maison</a>
+                        <a class="page-scroll" href="/">Maison</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/articles">blog</a>
