--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -6,7 +6,7 @@
             <div class="header-content-inner">
                 <h1>Le Blog du Yeti</h1>
                 <hr>
-                <p>Merci d'avoir pris de temps de venir ici</p>
+                <p>Merci d'avoir pris le temps de venir ici</p>
                 <a href="/articles" class="btn btn-primary btn-xl page-scroll">le blog</a>
             </div>
         </div>
