--- a/templates/base.html
+++ b/templates/base.html
@@ -41,13 +41,15 @@
        <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+<!--
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Blog du Yeti</a>
+-->
+                <a class="navbar-brand page-scroll" href="/">Blog du Yeti</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,18 +73,18 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="static/js/jquery.js"></script>
+    <script src="../static/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="static/js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="static/js/jquery.easing.min.js"></script>
-    <script src="static/js/jquery.fittext.js"></script>
-    <script src="static/js/wow.min.js"></script>
+    <script src="../static/js/jquery.easing.min.js"></script>
+    <script src="../static/js/jquery.fittext.js"></script>
+    <script src="../static/js/wow.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="static/js/gaston.js"></script>
+    <script src="../static/js/gaston.js"></script>
 
 </body>
 
